--- a/5. Blog_Website/css/contact.css
+++ b/5. Blog_Website/css/contact.css
@@ -3,17 +3,25 @@
   margin-top: 32px;
   padding: 9px;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .contact-content::after {
   content: "";
-  background-image: url("../img/Web_15-04.jpg");
+  background-image: url("../img/bg-img.jpg");
   position: absolute;
   top: 0;
   width: 100%;
-  height: inherit;
+  height: 433px;
   opacity: 0.15;
   border-radius: 12px;
   z-index: -1;
 }
+
+.contact-footer {
+  margin-top: 212px;
+}
+
+/* .contact-footer a {
+  color: white;
+} */
