--- a/5. Blog_Website/css/utils.css
+++ b/5. Blog_Website/css/utils.css
@@ -25,8 +25,11 @@
 .m-auto {
   margin: auto;
 }
-
-.my-2{
+.mx-1 {
+  margin-left: 23px;
+  margin-right: 23px;
+}
+.my-2 {
   margin-top: 32px;
   margin-bottom: 32px;
 }
@@ -53,4 +56,14 @@
   border-radius: 5px;
   margin: 0px 9px;
   font-family: var(--font1);
+}
+
+.form-box input, textarea{
+  width: 52vw;
+  padding: 0px 6px;
+  margin: 7px 0;
+  font-size: 18px;
+  font-family: var(--font1);
+  border: 2px solid var(--main-bg-color);
+    border-radius: 5px;
 }
